** Release Notes

1.4.14
  * added warning when site and/or excludedSite options are used

1.4.13
  * added possible non-option arg parsing in PathenaScript
  * added --useCentralRegistry to prun
  * added protection against empty tarball in pathena/prun
  
1.4.12
  * fixed pbook return
  * changed to prun to use --nGBPerJob and --nFilesPerJob exclusively

1.4.11
  * fixed pathena for argv

1.4.10
  * fixed username extraction with \d

1.4.9
  * changed pbook -c to allow running scripts
  * added -3 to pathena, prun, pbook
  * removed ()' from username

1.4.8 (12/9/2019)
  * doc for pbook
  * modified pbook to return an error code in case of failures

1.4.7 (12/3/2019)
  * fixed pbook for python 2.6

1.4.6 (12/3/2019)
  * fixed pbook for T3

1.4.5 (12/2/2019)
  * added new pandamon-based pbook

1.4.4 (11/12/2019)
  * fixed BookConfig

1.4.3 (11/11/2019)
  * symlink for python2/3 server

1.4.0 (10/30/2019)
  * changed version number for EventLoop

1.0.1 (10/29/2019)
  * fixed for T3

1.0.0 (10/29/2019)
  * cleanup
  
0.6.26 (12/9/2019)
  * added resumeTask function

0.6.25 (8/7/2019)
  * added --useSandbox to prun/pcontainer

0.6.24 (7/29/2019)
  * added maxWalltime and cpuTimePerEvent

0.6.23 (5/24/2019)
  * fixed killAndRetry in pbook
  * added getUserJobMetadata in pbook

0.6.22 (5/15/2019)
  * added --osMatch

0.6.21 (4/8/2019)
  * fixed for container+archive

0.6.20 (4/2/2019)
  * to set maxFailure and maxAttempt
  * pbook cleanup

0.6.19 (4/1/2019)
  * moved the PBookCore class to a separate module https://github.com/PanDAWMS/panda-client/pull/7

0.6.18 (3/26/2019)
  * for ALRB containers

0.6.17 (3/18/2019)
  * added --priority

0.6.16 (3/11/2019)
  * added pcontainer

0.6.15 (1/16/2019)
  * added processingType=blah-cont for container-based analysis

0.6.14 (12/12/2018)
  * fixed --loadJson for unicode
  * fixed --bulkSubmission for log

0.6.13 (12/11/2018)
  * added --dumpJson
  * added --bulkSubmission

0.6.12 (12/2/2018)
  * added --loadJson
