@@ -2,6 +2,7 @@
 
 1.4.14
   * added warning when site and/or excludedSite options are used
+  * using parse_known_args in pathena for passing arguments with -
 
 1.4.13
   * added possible non-option arg parsing in PathenaScript
